<package>
  <name>object_recognition_reconstruction</name>
  <version>0.2.15</version>
  <description>basic 3d reconstruction of an object from aligned Kinect data</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vrabaud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD></license>

  <url>http://ecto.willowgarage.com/recognition</url>
  <build_depend>assimp</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>
  <build_depend>ecto_pcl</build_depend>
  <build_depend>freeimage</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libdevil-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sdl</build_depend>

  <run_depend>assimp</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>ecto_image_pipeline</run_depend>
  <run_depend>ecto_pcl</run_depend>
  <run_depend>freeimage</run_depend>
  <run_depend>glut</run_depend>
  <run_depend>libdevil-dev</run_depend>
  <run_depend>libxi-dev</run_depend>
  <run_depend>libxmu-dev</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sdl</run_depend>
</package>
