<package>
  <name>object_recognition_reconstruction</name>
  <version>0.3.6</version>
  <description>basic 3d reconstruction of an object from aligned Kinect data</description>
  <author email="erublee@willowgarage.com">Ethan Rublee</author>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://wg-perception.github.io/reconstruction/</url>

  <build_depend>cmake_modules</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>ecto_image_pipeline</build_depend>
  <build_depend>ecto_pcl</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>opencv_candidate</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>ecto</run_depend>
  <run_depend>ecto_image_pipeline</run_depend>
  <run_depend>ecto_pcl</run_depend>
  <run_depend>meshlab</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>opencv_candidate</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
